--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
-astroid==2.3.3
-Click==7.0
-colorama==0.4.3
-fastapi==0.47.1
-gunicorn==20.0.4
-h11==0.9.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-pydantic==1.4
-pylint==2.4.4
-six==1.14.0
-starlette==0.12.9
-uvicorn==0.11.7
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
+fastapi==0.63.0
+geographiclib==1.50
+geopy==2.1.0
+h11==0.12.0
+idna==2.10
+numpy==1.19.5
+pandas==1.2.0
+pydantic==1.7.3
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+python-multipart==0.0.5
+pytz==2020.5
+PyYAML==5.3.1
+requests==2.25.1
+six==1.15.0
+starlette==0.13.6
+urllib3==1.26.2
+uvicorn==0.13.3
+watchgod==0.6
 websockets==8.1
-wrapt==1.11.2
+Werkzeug==1.0.1
+gunicorn==20.0.4
